@@ -1,3 +1,9 @@
+Tue Jul 15 01:23:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - Added the new buttons to the conversation window.
+
 Tue Jul 15 00:32:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* data/images/block.png:
